kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oglasojad
  namespace: oglasojad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oglasojad
  template:
    metadata:
      labels:
        app: oglasojad
    spec:
      containers:
      - name: oglasojad
        image: miki023/oglasojad:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: oglasojad
  namespace: oglasojad
spec:
  type: NodePort
  selector:
    app: oglasojad
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
