kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oglasojad-service
  namespace: oglasojad
spec:
  selector:
    app: oglasojad
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
